# vulkan

./: .cmake-format.yaml  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  flake.nix
.github/: FUNDING.yml  README.md  labeler.yml
.github/workflows/: check.yml  update.yml
builders/nix/: default.nix
parts/: default.nix  fmt.nix
parts/dev-shell/: default.nix
parts/pre-commit/: default.nix  utils.nix
shaders/: CMakeLists.txt
src/: CMakeLists.txt  camera.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.h  vk_initializers.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/vk/: CMakeLists.txt  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.h  vk_types.h
